Fix tab misalign in settings

--- a/themes/pmahomme/scss/_common.scss
+++ b/themes/pmahomme/scss/_common.scss
@@ -1983,6 +1983,7 @@ table#index_columns {
     margin: 1.1em 0.2em 0;
     list-style: none;
     font-weight: bold;
+    padding-left: 10px;
 
     li {
       float: $left;
